k8s/resources/deals-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deals-worker
  labels:
    app: deals-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      name: deals-worker
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: deals-worker
        app: deals-worker
    spec:
      containers:
      - image: docker.clrn.dev/crypto-ml:latest
        imagePullPolicy: Always
        name: worker
        args: ["/src/workers/deals.py"]
        resources:
          requests:
            memory: "2Gi"
          limits:
            memory: "8Gi"
        livenessProbe:
          exec:
            command: ["rm", "/tmp/alive"]
          initialDelaySeconds: 1200
          periodSeconds: 120
          timeoutSeconds: 10
        readinessProbe:
          exec:
            command: ["ls", "/tmp/ready"]
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 10
      imagePullSecrets:
        - name: regcred
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 1
