k8s/resources/price-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: price-worker
  labels:
    app: price-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      name: price-worker
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: price-worker
        app: price-worker
    spec:
      containers:
      - image: docker.clrn.dev/crypto-ml:latest
        imagePullPolicy: Always
        name: worker
        args: ["/src/workers/price.py", "--start-date", "$(BOT_START_TIME)"]
        resources:
          requests:
            memory: "300M"
        livenessProbe:
          exec:
            command: ["rm", "/tmp/alive"]
          initialDelaySeconds: 600
          periodSeconds: 120
          timeoutSeconds: 10
        readinessProbe:
          exec:
            command: ["ls", "/tmp/ready"]
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 10
      imagePullSecrets:
        - name: regcred
      dnsPolicy: ClusterFirst
      restartPolicy: Always
