k8s/resources/status-bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: status-bot
  labels:
    app: status-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      name: status-bot
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: status-bot
        app: status-bot
    spec:
      containers:
      - image: docker.clrn.dev/crypto-ml:latest
        imagePullPolicy: Always
        name: worker
        args: ["/src/bots/status.py"]
        resources:
          requests:
            memory: "100M"
        readinessProbe:
          exec:
            command: ["ls", "/tmp/ready"]
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 10
      imagePullSecrets:
        - name: regcred
      dnsPolicy: ClusterFirst
      restartPolicy: Always
