k8s/resources/trader.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trader
  labels:
    app: trader
spec:
  replicas: 1
  selector:
    matchLabels:
      name: trader
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: trader
        app: trader
    spec:
      containers:
      - image: docker.clrn.dev/crypto-ml:latest
        imagePullPolicy: Always
        name: worker
        args: ["/src/workers/trader.py", "-v", "INFO"]
        resources:
          requests:
            memory: "100M"
        livenessProbe:
          exec:
            command: ["rm", "/tmp/alive"]
          initialDelaySeconds: 60
          periodSeconds: 60
          timeoutSeconds: 10
        readinessProbe:
          exec:
            command: ["ls", "/tmp/ready"]
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 10
      imagePullSecrets:
        - name: regcred
      dnsPolicy: ClusterFirst
      restartPolicy: Always
